# OpenSplit

./: .gitattributes  .gitignore  Build-Windows.ps1  LICENSE  README.md  index.html  opensplit.example.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  detect.rs  ipc.rs  lib.rs  main.rs  pty.rs  session.rs
src/components/: App.svelte  ContextMenu.svelte  PaneView.svelte  SettingsPanel.svelte  Splitter.svelte  Terminal.svelte
src/lib/: PaneTree.ts  ipc.ts  terminalInstances.ts
