[package]
name = "opensplit"
version = "0.1.0"
description = "A fast cross-platform terminal harness with right-click splits and SSH session inheritance."
authors = ["OpenSplit contributors"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

# Library is required by Tauri's mobile generators; harmless on desktop.
[lib]
name = "opensplit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "opensplit"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
portable-pty = "0.8"
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.32"
bytes = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_ProcessStatus",
] }

[features]
# Default Tauri custom-protocol feature; enabled for `tauri build`.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
